--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0",
     "openai": "^4.89.0"
   },
   "devDependencies": {
